--- a/frontend/src/ui/css/layout/mobile.css
+++ b/frontend/src/ui/css/layout/mobile.css
@@ -23,23 +23,21 @@
         grid-template-rows: 7% 86% 7%;
         grid-template-areas:
             'header    header'
-            'body      body';
+            'body      body'
+            'footer    footer';
     }
 
     #header {
         display: flex;
         justify-content: space-around;
+        padding: 0;
         grid-area: header;
-        box-shadow: rgba(255, 255, 255, 0.089) 1cqi 1px 1px;
-        text-align: center;
-        font-family: Roboto;
 
         h1 {
             font-family: var(--font-family-primary);
             font-weight: var(--font-weight-titles);
             color: var(--light-color-text);
-
-            font-size: x-small;
+            font-size: x-large;
         }
     }
 
@@ -55,12 +53,15 @@
     }
 
     .menu-container {
-        display: inline-flex;
-        flex-direction: column;
-        justify-content: space-evenly;
         height: 100%;
         width: 3.7em;
-        background-color: transparent;
+    }
+
+    .menu-decorations {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
     }
 
     #skeleton {
@@ -72,7 +73,6 @@
         #navbar {
             display: flex;
             height: 100%;
-            box-shadow: rgba(255, 255, 255, 0.048) 1px 1px 3px;
             align-items: center;
             align-content: normal;
             max-width: 20em;
@@ -105,6 +105,14 @@
                 }
             }
         }
+    }
+
+    #menu-navbar {
+        text-decoration: none;
+        color: var(--light-color-text);
+        font-family: var(--font-family-primary);
+        font-weight: var(--font-weight-pharagraps);
+        color: var(--light-color-text);
     }
 }
 
